# Galumph

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  plans.txt
build_script_stuff/: board_rep_reduced.rs  lmr_builder.rs  magic_builder.rs  magic_tables.rs  mod.rs  nnue_bin_encoder.rs  rng.rs  zobrist_builder.rs
net_binaries/default/: header.rs
net_binaries/user/: header.rs
net_binary/: header.rs
src/: attacks.rs  board_rep.rs  chess_move.rs  magic.rs  magic_tables.rs  main.rs  movegen.rs  perft.rs  util_macros.rs
src/evaluation/: eval.rs  mod.rs
src/move_generation/: attacks.rs  board_rep.rs  chess_move.rs  magic.rs  mod.rs  movegen.rs  perft.rs
src/movegen/: attacks.rs  board_rep.rs  chess_move.rs  magic.rs  mod.rs  movegen.rs  perft.rs
src/nnue/: eval.rs  mod.rs  network.rs
src/search/: bench.rs  constants.rs  history.rs  killers.rs  late_move_reduction.rs  mod.rs  pv_table.rs  search_manager.rs  search_timer.rs  static_exchange.rs  transposition_table.rs  zobrist.rs  zobrist_stack.rs
src/uci/: constants.rs  mod.rs  setoption.rs  uci_handler.rs  uci_input.rs  uci_output.rs
